syntax = "proto3";

package asrserver;

service Asr {
  rpc RunAsr (NewTaskRequest) returns (TaskRecieved) {}
}

message NewTaskRequest {
  string speaking_id = 1;
  string object_id = 2;
}

message TaskRecieved {
  bool status = 1;
  string text = 2;
  float duration = 3;
  string error = 4;
}